# clean-test

./: .clang-format  .gitignore  CMakeLists.txt  README.rst
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clang.yml  doc.yml  gcc.yml  msvc.yml
doc/: CMakeLists.txt  api.rst  expressions.rst  index.rst  notions.rst  pyproject.toml  status.md  usage.rst
include/clean-test/: clean-test.h  execute.h  expression.h  framework.h
include/clean-test/execute/: BufferingMode.h  ColoringMode.h  Configuration.h  Main.h  NameFilterSetting.h  OperationMode.h
include/clean-test/expression/: Aborts.h  Add.h  Affirm.h  And.h  Base.h  BitwiseAnd.h  BitwiseNot.h  BitwiseOr.h  BitwiseXor.h  Clause.h  Close.h  Comma.h  Distance.h  Divide.h  Equal.h  Greater.h  GreaterEqual.h  LazyDetector.h  Less.h  LessEqual.h  Lift.h  Literals.h  Modulo.h  Multiply.h  Negate.h  Not.h  NotEqual.h  Or.h  ShortCircuitOperator.h  StandardOperator.h  Star.h  Subtract.h  Throws.h  Tolerance.h
include/clean-test/framework/: AbstractCaseRunner.h  Case.h  CaseRegistrar.h  CaseRunner.h  ConcreteCaseRunner.h  Expect.h  ExpectationObserver.h  Name.h  ObservationSetup.h  ObserverFwd.h  Registry.h  SuiteRegistrar.h  SuiteRegistrationSetup.h  Tag.h
include/clean-test/utils/: FwdCapture.h  Initializes.h  Math.h  Pack.h  Printable.h  RemoveRvalueReference.h  ScopeGuard.h  SourceLocation.h  Tuple.h  UTF8Encoder.h
src/: Main.cpp
src/execute/: Abortion.h  Badges.cpp  Badges.h  CaseEvaluator.cpp  CaseEvaluator.h  CaseReporter.cpp  CaseReporter.h  CaseResult.cpp  CaseResult.h  CaseStatus.h  ColorTable.cpp  ColorTable.h  ColoringSetup.cpp  ColoringSetup.h  Conductor.cpp  Conductor.h  Configuration.cpp  HelpDisplay.cpp  HelpDisplay.h  JUnitExport.cpp  JUnitExport.h  Main.cpp  NameFilter.cpp  NameFilter.h  Observation.h  ObservationStatus.h  Observer.cpp  Observer.h  Outcome.h  TreeDisplay.cpp  TreeDisplay.h  XMLEncoder.cpp  XMLEncoder.h
src/framework/: CaseRegistrar.cpp  ExpectationObserver.cpp  FallbackObservationSetup.h  ObservationSetup.cpp  Registry.cpp  SuiteRegistrationSetup.cpp
src/utils/: Guarded.h  OSyncStream.cpp  OSyncStream.h  RangesUtils.h  UTF8Encoder.cpp  UTF8Utils.cpp  UTF8Utils.h  WithAdaptiveUnit.h
support/: CleanTestConfig.cmake  check-commits-since.sh
test/: CMakeLists.txt  Complicated.cpp  Configuration.cpp  Default.cpp  Demo.cpp  Expect.cpp  Expression.cpp  Guarded.cpp  Math.cpp  NameFilter.cpp  OSyncStream.cpp  Registration.cpp  RegistrationAddendum.cpp  Reporting.cpp  ScopeGuard.cpp  Shared.cpp  TestUtilities.h  TreeDisplay.cpp  UTF8.cpp  Utils.cpp
