# Copyright m8mble 2021.
# SPDX-License-Identifier: BSL-1.0

[tool.poetry]
name = "gen"
version = "0.1.0"
description = "Generator for documentation"
authors = ["m8mble <m8mble@vivaldi.net>"]
license = "BSL-1.0"

[tool.poetry.dependencies]
python = ">=3.8"
Sphinx = ">=3.5.3"
breathe = ">=4.28.0"
sphinx-rtd-theme = ">=0.5.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
generate = 'gen.generate:main'

[tool.black]
line-length = 120
target-version = ['py38']
include = 'gen/.*\.py$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
